# python-c-extension

./: .env  Dockerfile  README.md  docker-compose.yml  requirements.txt
example/: pycextension.py
lib/: feature.py
lib/cpp/: CMakeLists.txt
lib/cpp/lib/feature/: CMakeLists.txt  feature.c  feature.h
